Closed Bug 1829592 Opened 3 years ago Closed 3 years ago

Intermittent Assertion failure: false (MOZ_ASSERT_UNREACHABLE: unexpected to be called), at /builds/worker/checkouts/gecko/gfx/layers/RemoteTextureMap.cpp:688

Categories

(Firefox :: PDF Viewer, defect, P5)

defect

Tracking

()

RESOLVED FIXED
114 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox112 --- unaffected
firefox113 --- unaffected
firefox114 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: sotaro)

References

(Regression)

Details

(Keywords: assertion, intermittent-failure, regression)

Attachments

(1 file)

Filed by: smolnar [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=413526833&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/cNQZVPukSY2jh_3dw-omJQ/runs/0/artifacts/public/logs/live_backing.log


INFO - TEST-START | toolkit/components/pdfjs/test/browser_pdfjs_saveas.js
[task 2023-04-24T08:37:30.720Z] 08:37:30     INFO - GECKO(7093) | [Child 7197: Main Thread]: I/DocShellAndDOMWindowLeak ++DOCSHELL 7f56d5727400 == 2 [pid = 7197] [id = 12]
[task 2023-04-24T08:37:30.722Z] 08:37:30     INFO - GECKO(7093) | [Child 7197: Main Thread]: I/DocShellAndDOMWindowLeak ++DOMWINDOW == 4 (7f56da981850) [pid = 7197] [serial = 30] [outer = 0]
[task 2023-04-24T08:37:30.723Z] 08:37:30     INFO - GECKO(7093) | [Child 7197: Main Thread]: I/DocShellAndDOMWindowLeak ++DOMWINDOW == 5 (7f56d5727800) [pid = 7197] [serial = 31] [outer = 7f56da981850]
[task 2023-04-24T08:37:30.865Z] 08:37:30     INFO - GECKO(7093) | [Child 7197: Main Thread]: I/DocShellAndDOMWindowLeak ++DOMWINDOW == 6 (7f56d571d400) [pid = 7197] [serial = 32] [outer = 7f56da981850]
[task 2023-04-24T08:37:31.163Z] 08:37:31     INFO - GECKO(7093) | [Child 8025: Main Thread]: I/DocShellAndDOMWindowLeak ++DOCSHELL 7f299a126c00 == 1 [pid = 8025] [id = 0]
[task 2023-04-24T08:37:31.164Z] 08:37:31     INFO - GECKO(7093) | [Child 8025: Main Thread]: I/DocShellAndDOMWindowLeak ++DOMWINDOW == 1 (7f299f2c0470) [pid = 8025] [serial = 1] [outer = 0]
[task 2023-04-24T08:37:31.166Z] 08:37:31     INFO - GECKO(7093) | [Child 8025: Main Thread]: I/DocShellAndDOMWindowLeak ++DOMWINDOW == 2 (7f299a127400) [pid = 8025] [serial = 2] [outer = 7f299f2c0470]
[task 2023-04-24T08:37:31.281Z] 08:37:31     INFO - GECKO(7093) | [Child 8025: Main Thread]: I/DocShellAndDOMWindowLeak ++DOMWINDOW == 3 (7f299a12a000) [pid = 8025] [serial = 3] [outer = 7f299f2c0470]
[task 2023-04-24T08:37:31.298Z] 08:37:31     INFO - GECKO(7093) | [Child 8025, Main Thread] WARNING: '!ClientIsValidCreationURL(mClientInfo.PrincipalInfo(), aArgs.url())', file /builds/worker/checkouts/gecko/dom/clients/manager/ClientSource.cpp:64
[task 2023-04-24T08:37:31.317Z] 08:37:31     INFO - GECKO(7093) | [Child 8025, Main Thread] WARNING: Listener is not retargetable: file /builds/worker/checkouts/gecko/netwerk/protocol/http/HttpChannelChild.cpp:2840
[task 2023-04-24T08:37:31.319Z] 08:37:31     INFO - GECKO(7093) | [Child 8025, Main Thread] WARNING: Failed to retarget HTML data delivery to the parser thread.: file /builds/worker/checkouts/gecko/parser/html/nsHtml5StreamParser.cpp:1235
[task 2023-04-24T08:37:31.996Z] 08:37:31     INFO - GECKO(7093) | [Child 7256: Main Thread]: I/DocShellAndDOMWindowLeak --DOMWINDOW == 3 (7f6df1d32470) [pid = 7256] [serial = 33] [outer = 0] [url = about:blank]
[task 2023-04-24T08:37:32.013Z] 08:37:32     INFO - GECKO(7093) | [Child 8025, Main Thread] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80004005 (NS_ERROR_FAILURE): file /builds/worker/checkouts/gecko/toolkit/xre/nsXREDirProvider.cpp:475
[task 2023-04-24T08:37:32.035Z] 08:37:32     INFO - GECKO(7093) | [Child 7197: Main Thread]: I/DocShellAndDOMWindowLeak --DOMWINDOW == 5 (7f56d5728000) [pid = 7197] [serial = 27] [outer = 0] [url = about:blank]
[task 2023-04-24T08:37:32.037Z] 08:37:32     INFO - GECKO(7093) | [Child 7197: Main Thread]: I/DocShellAndDOMWindowLeak --DOCSHELL 7f56d5723c00 == 1 [pid = 7197] [id = 11] [url = about:blank]
[task 2023-04-24T08:37:32.072Z] 08:37:32     INFO - GECKO(7093) | [Child 7197: Main Thread]: I/DocShellAndDOMWindowLeak --DOMWINDOW == 4 (7f56da981090) [pid = 7197] [serial = 28] [outer = 0] [url = about:blank]
[task 2023-04-24T08:37:32.222Z] 08:37:32     INFO - GECKO(7093) | ### XPCOM_MEM_BLOAT_LOG defined -- logging bloat/leaks to /tmp/tmpx1dhb543.mozrunner/runtests_leaks_tab_pid8141.log
[task 2023-04-24T08:37:32.224Z] 08:37:32     INFO - GECKO(7093) | [8141, Main Thread] WARNING: XPCOM_MEM_BLOAT_LOG is set, disabling native allocations.: file /builds/worker/checkouts/gecko/tools/profiler/core/platform.cpp:345
[task 2023-04-24T08:37:32.233Z] 08:37:32     INFO - GECKO(7093) | [Child 8141, Main Thread] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80004005 (NS_ERROR_FAILURE): file /builds/worker/checkouts/gecko/toolkit/xre/nsXREDirProvider.cpp:475
[task 2023-04-24T08:37:32.264Z] 08:37:32     INFO - GECKO(7093) | [Child 8141, Main Thread] WARNING: could not set real-time limit in CubebUtils::InitLibrary: file /builds/worker/checkouts/gecko/dom/media/CubebUtils.cpp:655
[task 2023-04-24T08:37:32.280Z] 08:37:32     INFO - GECKO(7093) | [Child 8141, Main Thread] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80004005 (NS_ERROR_FAILURE): file /builds/worker/checkouts/gecko/toolkit/xre/nsXREDirProvider.cpp:475
[task 2023-04-24T08:37:32.283Z] 08:37:32     INFO - GECKO(7093) | [Child 8141, Main Thread] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80004005 (NS_ERROR_FAILURE): file /builds/worker/checkouts/gecko/toolkit/xre/nsXREDirProvider.cpp:475
[task 2023-04-24T08:37:32.314Z] 08:37:32     INFO - GECKO(7093) | [Child 8141, Main Thread] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80004005 (NS_ERROR_FAILURE): file /builds/worker/checkouts/gecko/toolkit/xre/nsXREDirProvider.cpp:475
[task 2023-04-24T08:37:32.852Z] 08:37:32     INFO - GECKO(7093) | [Parent 7093, CanvasRenderer] WARNING: Failed to create EGLContext with khr_rbab_attribs: file /builds/worker/checkouts/gecko/gfx/gl/GLContextProviderEGL.cpp:727
[task 2023-04-24T08:37:32.854Z] 08:37:32     INFO - GECKO(7093) | [Parent 7093, CanvasRenderer] WARNING: Failed to create EGLContext with khr_robustness_attribs: file /builds/worker/checkouts/gecko/gfx/gl/GLContextProviderEGL.cpp:739
[task 2023-04-24T08:37:32.856Z] 08:37:32     INFO - GECKO(7093) | Initializing context 0x7fe425351ba0 surface 0x7fe41b8edc00 on display 0x7fe448314800
[task 2023-04-24T08:37:32.865Z] 08:37:32     INFO - GECKO(7093) | [Parent 7093, CanvasRenderer] WARNING: robust_buffer_access_behavior marked as unsupported: file /builds/worker/checkouts/gecko/gfx/gl/GLContextFeatures.cpp:638
[task 2023-04-24T08:37:32.867Z] 08:37:32     INFO - GECKO(7093) | [Parent 7093, CanvasRenderer] WARNING: Robustness supported, strategy is not LOSE_CONTEXT_ON_RESET!: file /builds/worker/checkouts/gecko/gfx/gl/GLContext.cpp:999
[task 2023-04-24T08:37:32.873Z] 08:37:32     INFO - GECKO(7093) | [Parent 7093, CanvasRenderer] WARNING: robustness marked as unsupported: file /builds/worker/checkouts/gecko/gfx/gl/GLContextFeatures.cpp:638
[task 2023-04-24T08:37:32.978Z] 08:37:32     INFO - GECKO(7093) | [Parent 7093, CanvasRenderer] WARNING: Failed to make an ideal SurfaceFactory.: file /builds/worker/checkouts/gecko/dom/canvas/WebGLContext.cpp:1030
[task 2023-04-24T08:37:33.847Z] 08:37:33     INFO - GECKO(7093) | [Parent 7093, Main Thread] WARNING: 'mIndex >= Count()', file /builds/worker/checkouts/gecko/xpcom/ds/nsStringEnumerator.cpp:202
[task 2023-04-24T08:37:33.917Z] 08:37:33     INFO - GECKO(7093) | [Child 8025, Main Thread] WARNING: '!aGlobalObject', file /builds/worker/checkouts/gecko/dom/script/ScriptSettings.cpp:412
INFO - GECKO(7093) | [Child 8025, Main Thread] WARNING: HangMonitorChild::InterruptCallback: ExpectingShutdown, canceling content JS execution.
[task 2023-04-24T08:37:34.033Z] 08:37:34     INFO - GECKO(7093) | : file /builds/worker/checkouts/gecko/dom/ipc/ProcessHangMonitor.cpp:378
[task 2023-04-24T08:37:34.040Z] 08:37:34     INFO - GECKO(7093) | JavaScript warning: resource://pdf.js/web/viewer.js, line 6236: Script terminated by timeout at:
[task 2023-04-24T08:37:34.040Z] 08:37:34     INFO - GECKO(7093) | _updateInternalState@resource://pdf.js/web/viewer.js:6236:3
[task 2023-04-24T08:37:34.041Z] 08:37:34     INFO - GECKO(7093) | _pushOrReplaceState@resource://pdf.js/web/viewer.js:6150:10
[task 2023-04-24T08:37:34.042Z] 08:37:34     INFO - GECKO(7093) | _tryPushCurrentPosition@resource://pdf.js/web/viewer.js:6178:12
[task 2023-04-24T08:37:34.042Z] 08:37:34     INFO - GECKO(7093) | _pageHide@resource://pdf.js/web/viewer.js:6331:12
[task 2023-04-24T08:37:34.043Z] 08:37:34     INFO - GECKO(7093) | EventListener.handleEvent*_bindEvents@resource://pdf.js/web/viewer.js:6345:12
[task 2023-04-24T08:37:34.043Z] 08:37:34     INFO - GECKO(7093) | initialize@resource://pdf.js/web/viewer.js:5983:10
[task 2023-04-24T08:37:34.043Z] 08:37:34     INFO - GECKO(7093) | _initializePdfHistory@resource://pdf.js/web/viewer.js:1540:21
[task 2023-04-24T08:37:34.044Z] 08:37:34     INFO - GECKO(7093) | __webpack_modules__</load/</<@resource://pdf.js/web/viewer.js:1280:14
[task 2023-04-24T08:37:34.044Z] 08:37:34     INFO - GECKO(7093) | promise callback*__webpack_modules__</load/<@resource://pdf.js/web/viewer.js:1278:119
[task 2023-04-24T08:37:34.100Z] 08:37:34     INFO - GECKO(7093) | Assertion failure: false (MOZ_ASSERT_UNREACHABLE: unexpected to be called), at /builds/worker/checkouts/gecko/gfx/layers/RemoteTextureMap.cpp:688
[task 2023-04-24T08:37:34.114Z] 08:37:34     INFO -  Initializing stack-fixing for the first stack frame, this may take a while...
[task 2023-04-24T08:37:44.177Z] 08:37:44     INFO - GECKO(7093) | #01: mozilla::layers::RemoteTextureMap::GetExternalImageIdOfRemoteTexture(mozilla::layers::RemoteTextureId, mozilla::layers::RemoteTextureOwnerId, int) [gfx/layers/RemoteTextureMap.cpp:688]
[task 2023-04-24T08:37:44.178Z] 08:37:44     INFO - GECKO(7093) | #02: mozilla::wr::RenderTextureHostWrapper::EnsureRemoteTexture() const [gfx/webrender_bindings/RenderTextureHostWrapper.cpp:62]
[task 2023-04-24T08:37:44.185Z] 08:37:44     INFO - GECKO(7093) | #03: mozilla::wr::RenderTextureHostWrapper::Lock(unsigned char, mozilla::gl::GLContext*) [gfx/webrender_bindings/RenderTextureHostWrapper.cpp:81]
[task 2023-04-24T08:37:44.185Z] 08:37:44     INFO - GECKO(7093) | #04: wr_renderer_lock_external_image [gfx/webrender_bindings/RendererOGL.cpp:0]
[task 2023-04-24T08:37:44.186Z] 08:37:44     INFO - GECKO(7093) | #05: <webrender_bindings::bindings::WrExternalImageHandler as webrender_api::image::ExternalImageHandler>::lock [gfx/webrender_bindings/src/bindings.rs:402]
[task 2023-04-24T08:37:44.186Z] 08:37:44     INFO - GECKO(7093) | #06: webrender::renderer::upload::upload_to_texture_cache [gfx/wr/webrender/src/renderer/upload.rs:102]
[task 2023-04-24T08:37:44.186Z] 08:37:44     INFO - GECKO(7093) | #07: webrender::renderer::Renderer::update_texture_cache [gfx/wr/webrender/src/renderer/mod.rs:1939]
[task 2023-04-24T08:37:44.186Z] 08:37:44     INFO - GECKO(7093) | #08: webrender::renderer::Renderer::render_impl [gfx/wr/webrender/src/renderer/mod.rs:1482]
[task 2023-04-24T08:37:44.186Z] 08:37:44     INFO - GECKO(7093) | #09: webrender::renderer::Renderer::render [gfx/wr/webrender/src/renderer/mod.rs:0]
[task 2023-04-24T08:37:44.186Z] 08:37:44     INFO - GECKO(7093) | #10: wr_renderer_render [gfx/webrender_bindings/src/bindings.rs:619]
[task 2023-04-24T08:37:44.187Z] 08:37:44     INFO - GECKO(7093) | #11: mozilla::wr::RendererOGL::UpdateAndRender(mozilla::Maybe<mozilla::gfx::IntSizeTyped<mozilla::gfx::UnknownUnits> > const&, mozilla::Maybe<mozilla::wr::ImageFormat> const&, mozilla::Maybe<mozilla::Range<unsigned char> > const&, bool*, mozilla::wr::RendererStats*) [gfx/webrender_bindings/RendererOGL.cpp:190]
[task 2023-04-24T08:37:44.187Z] 08:37:44     INFO - GECKO(7093) | #12: mozilla::wr::RenderThread::UpdateAndRender(mozilla::wr::WrWindowId, mozilla::layers::BaseTransactionId<mozilla::VsyncIdType> const&, mozilla::TimeStamp const&, bool, mozilla::Maybe<mozilla::gfx::IntSizeTyped<mozilla::gfx::UnknownUnits> > const&, mozilla::Maybe<mozilla::wr::ImageFormat> const&, mozilla::Maybe<mozilla::Range<unsigned char> > const&, bool*) [gfx/webrender_bindings/RenderThread.cpp:0]
[task 2023-04-24T08:37:44.187Z] 08:37:44     INFO - GECKO(7093) | #13: mozilla::wr::RenderThread::HandleFrameOneDocInner(mozilla::wr::WrWindowId, bool, bool, mozilla::Maybe<mozilla::wr::FramePublishId>) [gfx/webrender_bindings/RenderThread.cpp:629]
[task 2023-04-24T08:37:44.187Z] 08:37:44     INFO - GECKO(7093) | #14: mozilla::wr::RenderThread::HandleFrameOneDoc(mozilla::wr::WrWindowId, bool, bool, mozilla::Maybe<mozilla::wr::FramePublishId>) [gfx/webrender_bindings/RenderThread.cpp:578]
[task 2023-04-24T08:37:44.187Z] 08:37:44     INFO - GECKO(7093) | #15: mozilla::wr::RenderThread::WrNotifierEvent_HandleNewFrameReady(mozilla::wr::WrWindowId, bool, mozilla::wr::FramePublishId) [gfx/webrender_bindings/RenderThread.cpp:539]
[task 2023-04-24T08:37:44.187Z] 08:37:44     INFO - GECKO(7093) | #16: mozilla::wr::RenderThread::HandleWrNotifierEvents(mozilla::wr::WrWindowId) [gfx/webrender_bindings/RenderThread.cpp:0]
[task 2023-04-24T08:37:44.188Z] 08:37:44     INFO - GECKO(7093) | #17: mozilla::detail::RunnableMethodImpl<mozilla::wr::RenderThread*, void (mozilla::wr::RenderThread::*)(mozilla::wr::WrWindowId), true, (mozilla::RunnableKind)0, mozilla::wr::WrWindowId>::Run() [xpcom/threads/nsThreadUtils.h:1216]
[task 2023-04-24T08:37:44.188Z] 08:37:44     INFO - GECKO(7093) | #18: nsThread::ProcessNextEvent(bool, bool*) [xpcom/threads/nsThread.cpp:1234]
[task 2023-04-24T08:37:44.188Z] 08:37:44     INFO - GECKO(7093) | #19: NS_ProcessNextEvent(nsIThread*, bool) [xpcom/threads/nsThreadUtils.cpp:479]
[task 2023-04-24T08:37:44.188Z] 08:37:44     INFO - GECKO(7093) | #20: mozilla::ipc::MessagePumpForNonMainThreads::Run(base::MessagePump::Delegate*) [ipc/glue/MessagePump.cpp:0]
[task 2023-04-24T08:37:44.188Z] 08:37:44     INFO - GECKO(7093) | #21: MessageLoop::Run() [ipc/chromium/src/base/message_loop.cc:345]
[task 2023-04-24T08:37:44.188Z] 08:37:44     INFO - GECKO(7093) | #22: nsThread::ThreadFunc(void*) [xpcom/threads/nsThread.cpp:393]
[task 2023-04-24T08:37:44.193Z] 08:37:44     INFO - GECKO(7093) | #23: _pt_root [nsprpub/pr/src/pthreads/ptthread.c:204]
<....>

Maybe it's related to bug 1826280.
:sotaro, could you have a look please ?

Flags: needinfo?(sotaro.ikeda.g)

I take the bug.

Assignee: nobody → sotaro.ikeda.g
Flags: needinfo?(sotaro.ikeda.g)
Keywords: regression
Regressed by: 1829052

Set release status flags based on info from the regressing bug 1829052

The assert failure happened when wait of remote texture ready was skipped by WebRenderAPI::FlushPendingWrTransactionEventsWithoutWait(). It is called from WebRenderBridgeParent::ClearResources().

Pushed by sikeda.birchill@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/5e81022821f2 Suppress remote texture ready check when WebRenderAPI::FlushPendingWrTransactionEventsWithoutWait() is used r=gfx-reviewers,lsalzman
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 114 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: